--- a/linux/05、宕机分析.md
+++ b/linux/05、宕机分析.md
@@ -3,12 +3,13 @@
 1、使用upyime确定重启时间  
 2、sar命令确定宕机时间和前后性能(历史性能),    
 重启的时候会显示这类信息：05:09:09 PM  LINUX RESTART
-> cd /var/log/sa/
+> cd /var/log/sa/  
 cat sar20 | more  
 sar -r -f sa24  
 -u：输出CPU使用情况的统计信息  
 -b：显示I/O和传送速率的统计信息  
 -A:  显示所有  
+-n DEV：显示网卡流量信息
 
 
 2、检查/var/log/messages(由系统的systemd进程产生,定时任务产生的日志等)日志，等
