--- a/03、已解决的问题.md
+++ b/03、已解决的问题.md
@@ -8,4 +8,6 @@ frame.number > 21 && frame.number < 25
 
 我们经常使用到得DNS服务器里面有两个区域，即“正向查找区域”和“反向查找区域”，正向查找区 域就是我们通常所说的域名解析，反向查找区域即是这里所说的IP反向解析，它的作用就是通过查询IP地址的PTR记录来得到该IP地址指向的域名，当然， 要成功得到域名就必需要有该IP地址的PTR记录、
 ```
-3. 
+3. grafna告警阈值的设计策略：  
+内网ping时间长问题处理，设置evaluate的时间长一点也就是由ok转pengding的时间，减少凸起的告警
+
